--- a/examples/counter/index.html
+++ b/examples/counter/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Redux counter example</title>
+    <title>Redux Forms</title>
+    <link href="https://d1329pvav7gzp7.cloudfront.net/assets/application-59bee405420f817918381223b8bd00f1e545891ae6832c29d3018c6d0ada8bf4.css" media="all" rel="stylesheet">
   </head>
   <body>
     <div id="root">
